# CurrencyConverter

./: CMakeLists.txt  Launch Screen.storyboard  Main.qml  main.cpp
src/App/: CMakeLists.txt  main.cpp  translations.qrc
src/App/apple/: Info.plist  LaunchScreen.storyboard
src/App/apple/Assets.xcassets/: AppIcon.icns
src/App/translations/: translations_en.ts  translations_fr.ts  translations_it.ts  translations_ru.ts  translations_sp.ts  translations_ua.ts
src/App/utility/: servicemanager.cpp  servicemanager.h
src/Core/: CMakeLists.txt
src/Core/public/CurrencyConverter/utility/: currenciesloader.cpp  currenciesloader.h  messageshower.cpp  messageshower.h  servicemanager.cpp  servicemanager.h  settingsworker.cpp  settingsworker.h
src/Database/: CMakeLists.txt
src/Database/private/: sql_scripts.qrc
src/Database/private/sql_scripts/: tables_creation.sql
src/Database/public/: dbconnection.cpp  dbconnection.h  dbworker.cpp  dbworker.h  sqlscriptexecutor.cpp  sqlscriptexecutor.h
src/GUI/: CMakeLists.txt  currencyConverterUI.qrc  icons.qrc  translations.qrc
src/GUI/CurrencyConverterGui/: currencyconvertergui.cpp  currencyconvertergui.h  translator.cpp  translator.h
src/GUI/CurrencyConverterModules/: Main.qml
src/GUI/CurrencyConverterModules/Components/: ConvertionHistory.qml  CurrencyConvertionCard.qml  CustomComboBox.qml
src/GUI/CurrencyConverterModules/Dialogs/: MessageDialog.qml
src/GUI/CurrencyConverterModules/common/: Constants.qml  LanguagesModel.qml  Theme.qml
src/GUI/private/models/: currencyonexchangemodel.cpp  currencyonexchangemodel.h  currencytoexchangemodel.cpp  currencytoexchangemodel.h  historyexchangesmodel.cpp  historyexchangesmodel.h
src/GUI/translations/: translations_en.ts  translations_fr.ts  translations_it.ts  translations_ru.ts  translations_sp.ts  translations_ua.ts
src/Interfaces/: CMakeLists.txt
src/Interfaces/public/: ICurrencyModel.h  ITableCreator.h
tests/: CMakeLists.txt  main.cpp
